--- a/UNO/WebContent/GameStyle.css
+++ b/UNO/WebContent/GameStyle.css
@@ -2,7 +2,7 @@
 *{
 	margin:0px;
 	padding:0px;
-	font-family: Helvetica Neue; 
+	font-family:'Raleway', sans-serif; 
 	align-items: center;
 	background-position: center;
 }
