--- a/UNO/WebContent/MenuStyle.css
+++ b/UNO/WebContent/MenuStyle.css
@@ -9,7 +9,7 @@
     --blue:#6ad0de;
 }
 *{
-    font-family: 'Montserrat', monospace,sans-serif;
+    font-family:'Raleway', sans-serif;
     align-items: center;
     justify-content: center;
     flex-direction:column
