--- a/UNO/WebContent/GameStyle.css
+++ b/UNO/WebContent/GameStyle.css
@@ -2,7 +2,7 @@
 *{
 	margin:0px;
 	padding:0px;
-	font-family:'Raleway', sans-serif; 
+	font-family:'Raleway',sans-serif;
 	align-items: center;
 	background-position: center;
 }
@@ -12,10 +12,9 @@ section{
 }
 body{
 	height:100vh;
-    background-image: linear-gradient(to top right,#6ad0de,#e548f9);
+    background-image: linear-gradient(to top right,#16a085,#34495e);
     background-repeat:no-repeat;
     background-size:cover;
-    overflow-y: hidden;
     overflow-x: hidden;
 }
 
@@ -28,38 +27,40 @@ div#titulo{
 /*cotiene a todos los div */
 div#contenedorPrincipal{
 	background-position: center;
+	margin-left:135px;
+	heigth:40vh;
+	width: 80vw;
 	position: fixed;
 	background-color:#f6eeda;
 	border-radius: 8px;
-	padding-left: 190px;
-	padding-right: 250px;
-	padding-bottom: 150px;
-	margin:40px 50px;
-	
+	padding-bottom:25px;
 }
 /*contiene a las cartas del player*/
 div.contenedor{
-	width: 100px;
-	height: 130px;
+	width: 110px;
+	height: 140px;
 	float:left;
 	-webkit-transition: height .4s;
 	margin-left: 5px;
+	border-radius:5px;
 }
 /*contiene al cementerio*/
 div.contenedor2{
-	width: 100px;
-	height: 130px;
+	width: 110px;
+	height: 140px;
 	float:left;
-	margin-left: 5px;
+	margin-left: 15px;
+	border-radius:5px;
 }
 /*contiene las cartas que no se deben mostrar*/
 div.hideCard{
-	width: 100px;
-	height: 130px;
+	width: 110px;
+	height: 140px;
 	float:left;
 	margin-left: 5px;
 	background-color: rgb(27,54,71);
 	display: block;
+	border-radius:5px;
 }
 /*logo que se muestra en el reverso de la carta*/
 img.logo{
