--- a/UNO/WebContent/MenuStyle.css
+++ b/UNO/WebContent/MenuStyle.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 :root{
-    --red:#ef8c86;
-    --orange:#fcb677;
-    --green:#bcc35a;
+    --red:#ff6b81;
+    --orange:#ffa502;
+    --green:#4cd137;
     --darkgrey:#2a363b;
     --white:#ffffff;
     --pink:#e548f9;
     --blue:#6ad0de;
+    --lilac:#cd84f1;
 }
 *{
     font-family:'Raleway', sans-serif;
@@ -16,8 +17,8 @@
 
 }
 body{
-    height:100vh;
-    background-image: linear-gradient(to top right,#6ad0de,#e548f9);
+	height:100vh;
+    background-image: linear-gradient(to top right,#16a085,#34495e);
     background-repeat:no-repeat;
     background-size:cover;
     overflow-y: hidden;
@@ -42,12 +43,11 @@ button#mutebtn{
     cursor: pointer;
 }
 #menuBtns{
-    background-color:#f6eeda;
+	margin-left:130px;
+    background-color:#dfe4ea;
     border-radius:8px;
-    margin-left: 80px;
-    margin-top: 50px;
     padding:100px 350px;
-    position:absolute;
+    position:fixed;
     align-items: center;
     justify-content: center;
     flex-direction:column;
@@ -60,12 +60,13 @@ button#mutebtn{
 	background-position:center;
 	background-repeat:no-repeat;
     background-size:cover;
-    margin-left: 70px;
+    margin-left:80px;
+    margin-bottom:20px;
 	height:100px;
-    width:180px;
+    width:250px;
     display:inline-block;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     flex-direction:column;
     position:relative;
 }
@@ -76,18 +77,19 @@ button#mutebtn{
     margin: 0;
 }
 .btn-container{
-    padding-top: 150px;
-    display: flixed;
+    padding-top:150px;
+    display: fixed;
     align-items: center;
     justify-content: center;
     flex-direction:column;
     position:relative;
   }
+ 
   .btn-ghost{
     position: relativate;
     display: inline-block;
     border: 2px solid var(--white);
-    padding: 20px 80px;
+    padding: 20px 70px;
     color: var(--black);
     font-weight: 700;
     text-transform: uppercase;
@@ -213,3 +215,34 @@ button#mutebtn{
   .btn-ghost.secundary.green:active{
     box-shadow: inset 0 0 20px var(--white);
   }
+  
+  .btn-ghost.lilac{
+    background-color: var(--lilac);
+    border-color: var(--lilac);
+    color: var(--white);
+  }
+  
+  .btn-ghost.secundary.lilac{
+    background-color: transparent;
+    color: var(--lilac);
+  }
+  
+  .btn-ghost.lilac:hover{
+    background-color: transparent;
+    color: var(--lilac);
+  }
+  
+  .btn-ghost.secundary.lilac:hover{
+    background-color: var(--lilac);
+    color: var(--white);
+  }
+  
+  .btn-ghost.lilac:active{
+    box-shadow: inset 0 0 20px var(--red);
+  }
+  
+  .btn-ghost.secundary.lilac:active{
+    box-shadow: inset 0 0 20px var(--white);
+  }
+
+  
